Fix button scaling issue on mobile

--- a/mobile.css
+++ b/mobile.css
@@ -98,7 +98,7 @@
     }
 
     #intro button {
-        padding: 1vw 7vw;
+        padding: 1vw 6vw;
         border-width: 0.5vw;
         border-radius: 4vw;
         margin-right: 0.75vw;
